# BankManagerSystem

./: .gitignore  CMakeLists.txt  README.md
include/: header.h
src/: header.c  main.c
